[package]
name = "vault-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []


[dependencies]
pinocchio.workspace = true
pinocchio-log.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dev-dependencies]
litesvm = "0.8.1"
solana-sdk = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
